src/action/components/xkit-feature/index.css
:host {
  background-color: var(--background-color-canvas);
}

:host(:is(.search-hidden, .filter-hidden)) {
  display: none;
}

details.disabled:not([open], :hover, :focus-within) summary {
  opacity: 50%;
}

summary {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: flex-start;
  column-gap: 7.5px;
  padding: 11.25px;

  cursor: pointer;
  font-size: 15px;
}

summary::-webkit-details-marker {
  display: none;
}

summary:hover {
  background-image: linear-gradient(
    var(--button-background-color-hover),
    var(--button-background-color-hover)
  );
}

summary:hover:active {
  background-image: linear-gradient(
    var(--button-background-color-active),
    var(--button-background-color-active)
  );
}

summary:focus-visible {
  outline: 2px solid var(--color-accent-primary);
  outline-offset: -2px;
}

[role="switch"] {
  --toggle-height: 16px;
  --toggle-width: 32px;
  --toggle-border-width: 1px;
  --toggle-dot-margin: 1px;

  appearance: none;
  height: var(--toggle-height);
  width: var(--toggle-width);
  padding: 0;
  border-color: var(--border-color-interactive);
  border-style: solid;
  border-width: var(--toggle-border-width);
  border-radius: 9999px;

  background-color: var(--button-background-color);
  color: var(--border-color-interactive);
}

[role="switch"]:hover {
  background-color: var(--button-background-color-hover);
}

[role="switch"]:hover:active {
  background-color: var(--button-background-color-active);
}

[role="switch"]:focus-visible {
  outline: 2px solid var(--color-accent-primary);
  outline-offset: 2px;
}

[role="switch"]:checked {
  border-color: transparent;

  background-color: var(--color-accent-primary);
  color: var(--background-color-canvas);
}

[role="switch"]:checked:hover {
  background-color: var(--color-accent-primary-hover);
}

[role="switch"]:checked:hover:active {
  background-color: var(--color-accent-primary-active);
}

[role="switch"]::before {
  --toggle-dot-diameter: calc(
    var(--toggle-height)
    - (var(--toggle-border-width) * 2)
    - (var(--toggle-dot-margin) * 2)
  );
  --toggle-dot-transform-x: calc(
    var(--toggle-width)
    - (var(--toggle-border-width) * 2)
    - (var(--toggle-dot-margin) * 2)
    - var(--toggle-dot-diameter)
  );

  transform: translateX(0);

  display: block;
  height: var(--toggle-dot-diameter);
  width: var(--toggle-dot-diameter);
  margin: var(--toggle-dot-margin);
  border-radius: inherit;

  content: "";
  background-color: currentColor;
}

@media (prefers-reduced-motion: no-preference) {
  [role="switch"]::before {
    transition: transform 100ms;
  }
}

[role="switch"]:checked::before {
  transform: translateX(var(--toggle-dot-transform-x));
}

.icon {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-shrink: 0;
  width: 32px;
  height: 32px;
  border-radius: 8px;
  overflow: hidden;
}

.icon ::slotted(i) {
  font-size: 26px;
  line-height: 32px;
}

.icon,
.buttons {
  flex-shrink: 0;
}

.buttons {
  display: flex;
  flex-direction: row;
  align-items: center;
  column-gap: 8px;
  height: 32px;
  margin-left: auto;
}

.badge ::slotted(*) {
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 1em;
}

.badge ::slotted(a) {
  text-decoration: none;
}

.badge ::slotted(span) {
  padding: 2px 6px;

  background-color: #ff62ce;
  color: var(--text-color);
}

.title,
.description {
  margin: 0;
}

.description {
  font-size: 13px;
  color: var(--text-color-deemphasized);
}

ul.preferences {
  padding-inline: 7.5px;
  margin-block: 11.25px;

  list-style-type: none;
}

ul.preferences #empty {
  display: flex;
  justify-content: center;
  align-items: center;
}

::slotted(.search-highlighted) {
  background-color: #ffe900;
}

@media (prefers-color-scheme: dark) {
  ::slotted(.search-highlighted) {
    background-color: #003eaa;
  }
}

